feat: changed nav item + created footer

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,16 @@
     margin: 0 auto;
     font-family: sans-serif;
 }
+
+@mixin button() {
+    text-align: center;
+    padding: 15px;
+    color: white;
+    border: none;
+    border-radius: 60px;
+    font-size: 1rem;
+}
+
+@mixin button_tertiary() {
+    background-color: rgb(61, 111, 66);
+}
