--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 $primary: rgb(30, 49, 32);
+$secondary: rgb(30, 49, 32);
 
 @mixin container() {
     display: flex;
@@ -15,7 +16,14 @@ $primary: rgb(30, 49, 32);
     font-size: 1rem;
 }
 
-@mixin button_tertiary() {
+@mixin button-tertiary() {
     color: white;
     background-color: rgb(61, 111, 66);
+}
+
+@mixin background-image() {
+    background-image: url('/bg-transparent-3.png');
+    background-position: top;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
