--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,8 @@
 $primary: rgb(30, 49, 32);
-// $secondary: rgb(30, 49, 32);
+$secondary: rgb(42, 84, 42);
 $tertiary: rgb(61, 111, 66);
 $linkColor: rgb(242, 243, 242);
+$foodCard: rgb(31, 56, 33);
 
 @mixin container() {
     display: flex;
